tests/samples/negative/traits/trait_associated_type_unknown_equality.ax
module trait_associated_type_unknown_equality;

trait Source {
    type Item;
}

fn use_source[T](value: T) -> i32 where T: Source[Missing = i32] {
    return 0;
}

fn main() -> i32 {
    return 0;
}
